objects/Application_Log__c.object
<CustomObject>
    <description>Application Logging Object</description>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debug_Level__c</fullName>
        <label>Debug Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Payload__c</fullName>
        <description>If log is integration related show payload</description>
        <inlineHelpText>If log is integration related show payload</inlineHelpText>
        <label>Integration Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Code__c</fullName>
        <description>Either the exception error code of custom org code for record</description>
        <inlineHelpText>Either the exception error code of custom org code for record</inlineHelpText>
        <label>Log Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message to log</description>
        <inlineHelpText>Message to log</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>The related record id</description>
        <inlineHelpText>The related record id</inlineHelpText>
        <label>Reference Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Info__c</fullName>
        <description>The related record info (e.g. Apex Batch Job Id, Contact etc)</description>
        <inlineHelpText>The related record info (e.g. Apex Batch Job Id, Contact etc)</inlineHelpText>
        <label>Reference Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Function__c</fullName>
        <description>The originating function in the class (e.g. UpdateDivision() )</description>
        <inlineHelpText>The originating function in the class (e.g. UpdateDivision() )</inlineHelpText>
        <label>Source Function</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>The originating class (e.g. CustomerManagement)</description>
        <inlineHelpText>The originating class (e.g. CustomerManagement)</inlineHelpText>
        <label>Source</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Raw exception stack trace for unhandled errors</description>
        <inlineHelpText>Raw exception stack trace for unhandled errors</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timer__c</fullName>
        <description>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</description>
        <inlineHelpText>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</inlineHelpText>
        <label>Timer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Log</label>
    <nameField>
        <label>Application Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>